# ai-agent

./: .env.example  .gitignore  CLAUDE.md  OPENAI_TOOLS_IMPLEMENTATION.md  README.md  TOOL_INTEGRATION_COMPLETE.md  compose.yaml  demo_openai_tools.py  main.py  pyproject.toml  test_main.http  test_openai_format.py
app/: main.py
app/shared/: config.py  constants.py  deps.py  enums.py  exceptions.py  llm_utils.py  logging.py  protocols.py  schemas.py
app/workers/: chunk_consumer.py  (+4 more)
docs/: FINAL_FLAT_STRUCTURE.md  FINAL_STRUCTURE.md  FINAL_SUMMARY.md  LIBS_SIMPLIFICATION.md  LIBS_STRUCTURE_FIX.md  PROJECT_SETUP_GUIDE.md  QUICK_START.md  TOOLS_ANALYSIS.md  TOOLS_MIGRATION_SUMMARY.md  UPLOAD_FLOW.md  UPLOAD_IMPLEMENTATION.md  data_pipeline.md  rag_pipeline.md
migrations/: env.py
simulations/: run_pipeline.py  test.txt
tests/: conftest.py  test_action_agent.py  test_agent_service.py  test_auth.py  test_auth_service.py  test_cached_repository.py  test_chat.py  test_chat_service_tool_content.py  test_critique_agent.py  test_document_consumer.py  test_document_record_repository.py  test_document_service.py  test_documents_api.py  test_embedding_service_port.py  test_exceptions.py  test_formula_verification_agent.py  test_health.py  test_ifile_storage_port.py  test_memory_agent.py  test_openai_native_tools.py  test_orchestrator_service.py  test_rag_filtering_integration.py  test_reasoning_agent.py  test_response_modes.py  test_retrieval_agent.py  test_scientific_calc_tool.py  test_student_flow.py  test_tooling_robustness.py  test_tools_registry_setup.py
(+158 files in other folders)
