[project]
name = "agent-assitant"
version = "0.1.0"
description = "Layered FastAPI server with OpenAI-backed agent chat"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "openai>=1.70.0",
    "pydantic-settings>=2.8.0",
    "redis>=6.4.0",
    "sqlalchemy>=2.0.44",
    "psycopg[binary]>=3.2.12",
    "PyJWT>=2.10.1",
    "passlib[bcrypt]>=1.7.4",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
pythonpath = ["."]
